--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <button>Открыть рот</button>
         </div>
         <div class="about__images">
-            <img id="cat" src="pics\cat.png" alt="">
-            <img id="castle" src="pics\castle.jpg" alt="">
+            <img id="cat" src="img\cat.png" alt="">
+            <img id="castle" src="img\castle.jpg" alt="">
         </div>
 
     </section>
