--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ФЕНОМЕН</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap">
 </head>
 
 <body>
@@ -33,10 +34,69 @@
             <img id="cat" src="img\cat.png" alt="">
             <img id="castle" src="img\castle.jpg" alt="">
         </div>
-
     </section>
 
-    
+    <section class="form">
+        <div class="form__container">
+            <h1>Оставьте свои контакты</h1>
+            <p>Приветствую<br>дорогой<br>лавки</p>
+            <form>
+                <div class="form__group">
+                    <label for="name">Введи позывной</label>
+                    <input type="text" placeholder="Ивандупало" id="name">
+                </div>
+                <div class="form__group">
+                    <label for="email">Введите почту</label>
+                    <input type="email" placeholder="***@gmail.com" id="email">
+                </div>
+                <div class="form__group">
+                    <label for="phone">Номер трубы</label>
+                    <input type="tel" placeholder="8 800 808 88 88" id="phone">
+                </div>
+                <div class="form__group">
+                    <label for="budget">Примерный бюджет</label>
+                    <select id="budget">
+                        <option value="10-30">10 000₽ – 30 000₽</option>
+                        <option value="30-60">30 000₽ – 60 000₽</option>
+                        <option value="60-100">60 000₽ – 100 000₽</option>
+                        <option value="100+">100 000₽</option>
+                    </select>
+                </div>
+                <button class='form__submit' type="submit">Отправить заявку</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer__container">
+            <div class="footer__group">
+                <h3>Позвонить нам:</h3>
+                <div class="footer__links">
+                  <a href="tel:74959999999">+7 (495) 999-99-99</a>
+                </div>
+              </div>
+              <div class="footer__group">
+                <h3>Решения для дома</h3>
+                <div class="footer__links">
+                  <a href="#">Солнечные панели GreenRobotic</a>
+                  <a href="#">Системы солнечных панелей GreenStation</a>
+                </div>
+              </div>
+              <div class="footer__group">
+                <h3>Компания</h3>
+                <div class="footer__links">
+                  <a href="#">Контакты</a>
+                  <a href="#">Вакансии</a>
+                  <a href="#">СМИ</a>
+                </div>
+              </div>
+        </div>
+        <div class="footer__copyright">
+            FNMNCorp © 2024.
+        </div>
+    </footer>
+
+
 
 
 </body>
